--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   http_parser: ^4.1.2
   lottie: ^3.3.1
   mime: ^2.0.0
+  rive: ^0.13.20
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
