--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   rive: ^0.13.20
   shared_preferences: ^2.5.3
   intl: ^0.20.2
+  socket_io: ^1.0.1
+  socket_io_client: ^1.0.2
 
 dev_dependencies:
   flutter_test:
