--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   rive: ^0.13.20
   shared_preferences: ^2.5.3
   intl: ^0.20.2
+  dotted_border: ^3.1.0
 
 dev_dependencies:
   flutter_test:
