--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   shared_preferences: ^2.5.3
   intl: ^0.20.2
   dotted_border: ^3.1.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
