--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.20.2
   dotted_border: ^3.1.0
   shimmer: ^3.0.0
+  dropdown_search: ^6.0.2
 
 dev_dependencies:
   flutter_test:
