--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   dotted_border: ^3.1.0
   shimmer: ^3.0.0
   dropdown_search: ^6.0.2
+  socket_io_client: ^3.1.2
 
 dev_dependencies:
   flutter_test:
