--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   shimmer: ^3.0.0
   dropdown_search: ^6.0.2
   socket_io_client: ^3.1.2
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.0
 
 dev_dependencies:
   flutter_test:
