--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.0
   flutter_colorpicker: ^1.1.0
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
