--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,8 @@ dependencies:
   firebase_auth: ^6.0.0
   flutter_colorpicker: ^1.1.0
   multi_select_flutter: ^4.1.3
-
+  mrx_charts: ^0.1.3
+  fl_chart: ^0.68.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
