--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,9 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   multi_select_flutter: ^4.1.3
   mrx_charts: ^0.1.3
-  fl_chart: ^0.68.0
+#  fl_chart: ^0.68.0
+  syncfusion_flutter_charts: ^31.1.19
+  animated_custom_dropdown: ^3.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
